package MachineCoding_LLD.LLD_Interview_Problems._09_Hard_CabBookingSystem.model;

/** A passenger who requests rides. */
public record Rider(String id, String name) { }
